:lipstick: Rounded Buttons and Icon
added a drawable for rounded buttons to be reused

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="first_name">FIRST NAME</string>
     <string name="surname">SURNAME</string>
     <string name="log_in">LOG IN</string>
+    <string name="email_username">EMAIL/USERNAME</string>
+    <string name="password">PASSWORD</string>
 </resources>
