--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">FreightCrayt</string>
-    <string name="sign_up">SIGN UP</string>
+    <string name="sign_up">Sign up</string>
     <string name="first_name">FIRST NAME</string>
     <string name="surname">SURNAME</string>
     <string name="log_in">LOG IN</string>
