--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="password">PASSWORD</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_label">TITLE</string>
+    <string name="description_label">DESCRIPTION</string>
+    <string name="custom_description_label">CUSTOM DESCRIPTION</string>
+    <string name="category_label">CATEGORY</string>
+    <string name="sub_title_label">SUB-TITLE</string>
+    <string name="discard_label">DISCARD</string>
+    <string name="add_label">ADD</string>
+    <string name="plus_sign_label">+</string>
 </resources>
