:lipstick: Some more updates to GUI
got linear layout and center gravity, made a new red rounded button that doesnt seem to work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="discard_label">DISCARD</string>
     <string name="add_label">ADD</string>
     <string name="plus_sign_label">+</string>
+    <string name="upload_image_label">UPLOAD IMAGE</string>
 </resources>
