:lipstick: Made it look even prettier
Red discard button still not red but it should be since ive referenced an xml file that has the color red and rounded.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="add_label">ADD</string>
     <string name="plus_sign_label">+</string>
     <string name="upload_image_label">UPLOAD IMAGE</string>
+    <string name="new_item_label">NEW ITEM</string>
+    <string name="image_of_collectable_desc">Image of Collectable</string>
 </resources>
