--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="delete_button">Delete</string>
     <string name="sign_out_button">Sign out</string>
     <string name="update_button">Update</string>
+    <string name="analytics_btn">analytics</string>
 </resources>
